<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="2"
            android:id="@+id/wordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lookupword_name"/>
        <Button
            android:id="@+id/btn_lookup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lookup_name"
            android:onClick="lookUp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/lookUpTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:hint="@string/lookUpTextView_hint"/>


</LinearLayout>
